--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,11 @@
 
 <form action="/login" method="post">
   <label for="name">Name:</label>
-  <input type="text"  name="name" ><br><br>
+  <input type="text"  name="name" id="name" ><br><br>
   <label for="uname">USERNAME:</label>
-  <input type="text"  username="uname" uname="uname" ><br><br>
+  <input type="text"  name="uname" id="uname" ><br><br>
   <label for="eml">EMAIL:</label>
-   <input type="text"  eml="eml" ><br><br>
+   <input type="text"  name="eml" id="eml"><br><br>
   
   <input type="submit" value="Submit">
 </form>
